--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,12 @@ dependencies:
   flutter_offline: ^4.0.0
   connectivity_plus: ^6.1.0
   internet_connection_checker: ^1.0.0+1
+  dio: ^5.7.0
+  package_info_plus: ^8.1.1
+  path_provider: ^2.1.5
+  open_file: ^3.5.10
+  permission_handler: ^11.3.1
+  android_intent_plus: ^5.2.0
 
 flutter_icons:
   android: true
